src/test/ui/pub/pub-ident-with-lifetime-incomplete.rs
fn main() {
}

pub   foo<'a>
//~^ ERROR missing `fn` or `struct` for method or struct definition
